--- a/Exam/index.html
+++ b/Exam/index.html
@@ -29,7 +29,7 @@
         <br><br><br>
         <h1 href>Practical Exam </h1><br>
 
-        <h3><a href="JAVA Practical.txt" target="_blank">JAVA Program</a></h3>
+        <h3><a href="JAVA Practical.txt" target="_blank">DATA SCIENCE</a></h3>
         <h3><a href="DBMS Practical.txt" target="_blank">DBMS Program</a></h3><br><br>
     </center>
 </body>
